--- a/css-basics/css-basics_pokemon-page/index.html
+++ b/css-basics/css-basics_pokemon-page/index.html
@@ -27,7 +27,7 @@
       <img
         class="image-fluid"
         src="https://source.unsplash.com/600x400?pikachu"
-        alt=""
+        alt="Show Image "
       />
       <section class="favourites">
         <h2 class="subtitle">Favourite Pokémon</h2>
